<resources>
    <string name="app_name">Sahara</string>
    <string name="app_tagline">The Helping Hand</string>
    <string name="introslider_button_start">"Let's Get Started"</string>
    <string name="introslider_button_skip">SKIP</string>

    <!-- The Heading Value in intro Slider -->
    <string name="slider_heading_needy">Needy </string>
    <string name="slider_heading_ngo">NGO</string>
    <string name="slider_heading_donar">Donar</string>
    <string name="slider_heading_volunteer">Volunteer</string>

    <!-- The Detail Description Value in intro Slider -->
    <string name="slider_desc_needy">Dare to reach out your hand into the darkness, to pull another hand into the light.</string>
    <string name="slider_desc_ngo">Service to others is the rent you pay for your room here on earth.</string>
    <string name="slider_desc_donar">Remember that there is no happiness in having or in getting, but only in giving.</string>
    <string name="slider_desc_volunteer">We don’t get paid, not because we’re worthless, but because we’re priceless.</string>

    <!--Login Sign UP Dashboard-->
    <string name="loginsignup_dashboard_covid">Covid 19\nMaintain  Social Distance </string>
    <string name="loginsignup_dashboard_food">Food For Everyone</string>

    <string name="loginsignup_button_login">LOGIN</string>
    <string name="loginsignup_button_signup">SIGNUP</string>
    <string name="loginsignup_button_work">How we Work ? </string>

    <!--Login Activity-->
    <string name="login_text_login">LOGIN</string>
    <string name="login_button_Forgot">Forgot Password ?</string>

    <string name="login_button_login">Login</string>
    <string name="login_button_create">Create Account</string>

    <string name="login_edit_username">Email ID</string>
    <string name="login_edit_password">Password</string>

    <!--Selection Of category Activity-->
    <string name="selection_category_text_role">Select Your Role</string>

    <!--SignUp Activity Page 1-->
    <string name="signup_page1_text_title">Create\nAccount</string>
    <string name="signup_page1_edit_fname">First Name</string>

    <string name="signup_page1_edit_lname">Last Name</string>
    <string name="signup_page1_edit_email">Email ID</string>
    <string name="signup_page1_edit_pass">Password</string>
    <string name="signup_page1_edit_ngo">NGO Name</string>

    <string name="signup_page1_btn_next">Next</string>
    <string name="signup_page1_btn_login">Login</string>

    <!--SignUp Activity Page 2-->
    <string name="signup_page2_text_title">Create\nAccount</string>
    <string name="signup_page2_edit_add_line1">Address Line 1</string>

    <string name="signup_page2_edit_add_line2">Area</string>
    <string name="signup_page2_text_select_age">Select Your Age</string>

    <string name="signup_page2_btn_next">Next</string>

    <!--SignUp Activity Page 3-->
    <string name="signup_page3_text_title">Create\nAccount</string>
    <string name="signup_page3_edit_contact">contact Number</string>

    <string name="signup_page3_spinner_city">Select City</string>
    <string name="signup_page3_switch_city">Works with NGO?</string>
    <string name="signup_page3_edit_ngo">Members in NGO</string>


    <string name="signup_page3_rgrp_gender">Choose Gender</string>
    <string name="signup_page3_rbtn_male">Male</string>
    <string name="signup_page3_rbtn_female">Female</string>
    <string name="signup_page3_rbtn_others">Others</string>

    <string name="signup_page3_rgrp_volunteer">Volunteer Type</string>
    <string name="signup_page3_rbtn_emergency">Emergency</string>
    <string name="signup_page3_rbtn_fixed">Fixed</string>
    <string name="signup_page3_rbtn_normal">Normal</string>

    <string name="signup_page3_btn_signup">SignUP</string>
    <string name="empty_password">Please Enter Password</string>
    <string name="password_message"><b>TOO WEAK!!</b>\nPassword has minimum 8 characters and has at least one Number[0–9],one Uppercase[A-Z],one Lowercase[a-z] and one Special Character[@#$%^*=+]</string>

    <string name="estalbished_year">Established Year</string>
    <string name="birthdate_selection">Select Your Birth Date</string>
    <string name="invalid_date">Invalid Date</string>
    <string name="select_city">Please Select the City</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Add Donor Fragment -->
    <string name="add_donor_popup_close">X</string>
    <string name="add_donor_popup_ttile">Add an Item</string>
    <string name="add_donor_popup_hint_item">Item Name</string>
    <string name="add_donor_popup_hint_persons">No. of Persons</string>
    <string name="add_donor_popup_hint_weight">Weight of food(approx)</string>
    <string name="add_donor_popup_hint_spoilage">Spoilage</string>
    <string name="add_donor_popup_button_text">Add to Basket</string>


    <string name="add_donor_fragment_title_first">Thanks a Ton to Donate</string>
    <string name="add_donor_fragment_title_second">Lets Quickly add details</string>
    <string name="add_donor_fragment_date_donation">Select The Date You Want to Donate</string>
    <string name="add_donor_fragment_switch_raw">Does it contain Raw Food</string>
    <string name="add_donor_fragment_switch_self_donation">Do you want Volunteer to pickup</string>
    <string name="add_donor_fragment_text_pickup_time">Pick UP Time</string>
    <string name="add_donor_fragment_button_text">Proceed</string>

    <string name="add_donor_activity_title_text">Items into Basket</string>


    <!--Add Donor Recycler View and cardView -->
    <string name="add_donor_cardview_text_itemname">Item Name</string>
    <string name="add_donor_cardview_text_noofpersons">No. Of Persons</string>
    <string name="add_donor_cardview_text_weight">Weight</string>
    <string name="add_donor_cardview_text_spoilage">Spoilage</string>
    <string name="add_donor_activity_button_donate">Donate</string>

    <!--Profile Fragment -->
    <string name="profile_fragment_title">Sahara</string>
    <string name="profile_fragment_title_donations">Donations</string>
    <string name="profile_fragment_title_needy">Needy</string>
    <string name="profile_fragment_title_donation_accept">Donation Accepted</string>
    <string name="profile_fragment_text_zero">0</string>
    <string name="profile_fragment_title_name">Name</string>
    <string name="profile_fragment_title_email">Email</string>
    <string name="profile_fragment_title_area">Area</string>
    <string name="profile_fragment_title_dob">Date of Birth</string>
    <string name="profile_fragment_button_edit_profile">Edit Profile</string>
    <!-- Settings Activity-->

    <string name="setting_activity_title">Settings</string>
    <string name="setting_activity_tv_title_account">Account</string>
    <string name="setting_activity_tv_title_support">Support</string>
    <string name="setting_activity_tv_title_about">About</string>
    <string name="setting_activity_tv_title_login">Authentication</string>
    <string name="setting_activity_tv_pass">Change Password</string>
    <string name="setting_activity_tv_general_set">General Settings</string>
    <string name="setting_activity_tv_contact">Contact Us</string>
    <string name="setting_activity_tv__report">Report A problem</string>
    <string name="setting_activity_tv_feedback">Feedback</string>
    <string name="setting_activity_tv_about">About Sahara</string>
    <string name="setting_activity_tv_logout">Logout</string>

    <!-- Settings Activity-->
    <string name="setting_editprof_activity_title">Change Your Details</string>
    <string name="setting_editprof_activity_btn_confirm">Confirm</string>

    <!--Pop Up window Edit Profile-->
    <string name="change_setting_popup_window_title">Do you want to change the settings ?</string>
    <string name="change_setting_popup_window_btn_reject">Reject</string>
    <string name="change_setting_popup_window_btn_confirm">Confirm</string>

    <!--Pop Up window Logout-->
    <string name="setting_popup_window_title">Want to Logout?</string>
    <string name="setting_popup_window_remember_checkbox">Remember Your Credentials</string>
    <string name="setting_popup_window_btn_reject">Cancel</string>
    <string name="setting_popup_window_btn_confirm">Logout</string>

    <!--Settings Report A Problem-->
    <string name="setting_report_prob_title">Report</string>
    <string name="setting_report_prob_hint_email">Email</string>
    <string name="setting_report_prob_hint_message">Your Message</string>
    <string name="setting_report_prob_btn_submit">Submit</string>

    <!--Settings Feedback-->
    <string name="setting_feedback_title">Feedback</string>
    <string name="setting_feedback_hint_email">Email</string>
    <string name="setting_feedback_hint_message">Your Message</string>
    <string name="setting_feedback_btn_submit">Submit</string>
    <string name="forget_password">Forget Passord</string>
    <string name="forget_password_detail">Povide Your Account\'s Email For Which You Want To Reset Your Password!</string>
    <string name="enter_email">Email</string>
    <string name="next_btn">NEXT</string>
    <string name="make_selection_details">Select which contact details should we use to reset your password?</string>
    <string name="make_selection">Make Selection</string>
    <string name="via_sms">via sms :</string>
    <string name="via_mail">via mail :</string>
    <string name="otp_code_text">Co\nde</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter one Time Password sent on\n+91 9898423658</string>
    <string name="new_credentials">New\nCredentials</string>
    <string name="new_credentials_details">Your Identity has been verified!\nSet Your New Password</string>
    <string name="password_updated">Password\nUpdated</string>
    <string name="password_updated_success_message">Your password has been updated!</string>

    <!--Loading Progress-->
    <string name="loading_progress_bar">Loading... </string>


    <string name="contact_us">Get In Touch?</string>
    <string name="contact_us_description">Want to get in touch? We\'d love to hear from you.\nHere\'s how you can reach us.</string>
    <string name="email_us">Email Us</string>
    <string name="vision">Our Vision</string>
    <string name="vision_description">Make People Hunger Free</string>
    <string name="who_we_are">Who We Are</string>
    <string name="emergency_description">We also respond with emergency food and relief during disaster like Covid-19.</string>
    <string name="geography_description">Deliever a food on time and fresh is our responsibility.</string>
    <string name="the_drivers">"The driver of our mission "</string>
    <string name="ngo_description">NGO Helps us to manage a delivery.</string>
    <string name="volunteer_description">Volunteer(aka Hunger Hero) is the backbone of our system.</string>
    <string name="needy_description">Feed Us We are Hungry</string>
    <string name="enter_ngo_name">Enter NGO Name</string>
    <string name="thanks_with_a_grateful_heart">Thanks with a Grateful Heart!!</string>
    <string name="donation_details">Donation Details</string>
    <string name="items">Items</string>
    <string name="recent_orders">Recent Orders</string>


</resources>
