<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".LoginSignUPDashboard.LoginSignUpDashboard">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/loginsignup_dashboard" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/bungee"
            android:text="@string/loginsignup_dashboard_covid"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_signup_dashboard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:onClick="dashboardSignUp"
                android:background="@color/colorPrimary"
                android:text="@string/loginsignup_button_signup" />

            <Button
                android:id="@+id/btn_login_dashboard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:onClick="dashboardLogin"
                android:text="@string/loginsignup_button_login"
                android:textStyle="bold"
                android:transitionName="btn_login_transition" />

        </LinearLayout>
        <Button
            android:id="@+id/btn_work_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:onClick="dashboardHowWeWork"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/loginsignup_button_work" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/bungee"
            android:layout_marginTop="20dp"
            android:text="@string/loginsignup_dashboard_food"
            android:textAlignment="center"
            android:textSize="20sp" />


    </LinearLayout>
</ScrollView>