<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="370dp"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/adddonor_btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/popup_window_oval_shape_close"
        android:fontFamily="@font/muli_black"
        android:padding="5dp"
        android:text="@string/add_donor_popup_close"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/muli_black"
        android:text="@string/add_donor_popup_ttile"
        android:textSize="25sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_donor_popup_hint_item"
        android:textColor="@color/black"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:startIconDrawable="@drawable/signup_pages_textinput"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/adddonor_edit_itemname_popup_window"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/muli_black"
            android:inputType="text" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_donor_popup_hint_persons"
        android:textColor="@color/black"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:startIconDrawable="@drawable/signup_pages_textinput"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/adddonor_edit_noofpersons_popup_window"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/muli_black"
            android:inputType="number" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_donor_popup_hint_weight"
        android:textColor="@color/black"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:startIconDrawable="@drawable/signup_pages_textinput"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/adddonor_edit_weightfood_popup_window"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/muli_black"
            android:inputType="numberDecimal" />


    </com.google.android.material.textfield.TextInputLayout>


    <Switch
        android:id="@+id/adddonor_switch_spoiler_popup_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/muli_black"
        android:text="@string/add_donor_popup_hint_spoilage"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/adddonor_btn_addbucket_popup_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/popup_window_rectangle_shape_button"
        android:fontFamily="@font/muli_black"
        android:text="@string/add_donor_popup_button_text"
        android:textColor="@android:color/white" />
</LinearLayout>