<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDashboard.ProfileSettingsContactUs"
    android:background="@color/colorPrimary"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_black"
            android:gravity="center"
            android:text="@string/contact_us"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_us_description"
            android:textColor="@color/white"
            android:layout_marginTop="4dp"
            android:textSize="12sp"
            android:gravity="center"/>

        <Button
            android:id="@+id/emailUs"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/colorAccent"
            android:fontFamily="@font/muli_black"
            android:layout_gravity="center"
            android:text="@string/email_us"
            android:textSize="12sp"
            android:onClick="mailMe"/>
    </LinearLayout>
</LinearLayout>