<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="150dp"
    android:layout_gravity="center"
    android:background="#424242"
    android:elevation="1dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/muli_black"
        android:text="@string/setting_popup_window_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="20">

        <CheckBox
            android:id="@+id/settings_logout_checkbox_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/setting_popup_window_remember_checkbox"
            android:textColor="@color/white" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:elevation="3dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="20">

        <Button
            android:id="@+id/settings_pop_btn_reject_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="10"
            android:background="@drawable/popup_window_rectangle_shape_button"
            android:elevation="10dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/setting_popup_window_btn_reject" />

        <Button
            android:id="@+id/settings_pop_btn_confirm_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="10"
            android:background="@drawable/popup_window_rectangle_shape_button"
            android:elevation="10dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/setting_popup_window_btn_confirm" />

    </LinearLayout>


</LinearLayout>