<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.ForgetPasswordSuccessMessage"
    android:background="@color/white"
    android:padding="30dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_updated"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:fontFamily="@font/muli_black"
            android:textAlignment="center"
            android:gravity="center"
            android:textAllCaps="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icons8_ok_100"
            android:layout_margin="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_updated_success_message"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textAlignment="center"
            android:gravity="center" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login_text_login"
            android:background="@color/black"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:onClick="do_login"/>

    </LinearLayout>

</LinearLayout>